--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -64,7 +64,7 @@
                         <a href="" target="_blank">忘记密码？</a>
                     </div>
                     <div class="input-box sub-box">
-                        <input type="submit"  ng-click="loginFrom()" id="login" value="登录">
+                        <input type="button"  ng-click="loginFrom()" id="login" value="登录">
                     </div>
                 </form>
                 <div class="hezuo oauth">
@@ -138,18 +138,22 @@
 
 <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
 <script src="/js/main.js" type="text/javascript"></script>
-
-<!--<script src="/js/main.js" type="text/javascript"></script>-->
-<!--<script src="/js/users.js" type="text/javascript"></script>-->
+<script src="/js/main.js" type="text/javascript"></script>
+<script src="/js/users.js" type="text/javascript"></script>
 <script src="/js/layer.min.js"></script>
 <script>
 
     var app = angular.module('login', []);
     app.controller('UserController', function($scope,$http) {
-        $scope.loginFrom = function () {
+        $scope.loginFrom = function (){
+
             var username = $scope.username;
             var password = $scope.password;
-            var parme = {'username': username, 'password': password};
+        if(username==""||password==""){
+            alert("您没有填写账号和密码"); return false;
+        }
+
+        var parme = {'username': username, 'password': password};
             $http({
                 method: 'POST',
                 url: '/user/selectlogin',
