--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -149,7 +149,7 @@
 </div>
 
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
- <!--   <script src="js/users.js" type="text/javascript"></script>-->
+    <script src="js/users.js" type="text/javascript"></script>
     <script src="js/layer.min.js"></script>
     <script src="/js/angular/angular.min.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -164,7 +164,7 @@
               var phone=$scope.phone;
               var password=$scope.password;
               var repassword=$scope.repassword;
-              var parm ={
+              var parme ={
                   'username':username,
                   "phone":phone,
                   "password":password,
@@ -172,12 +172,12 @@
               };
               $http({
                   method:'POST',
-                  url:'/user/addUser',
-                  data:parm,
+                  url:'/user/addUsers',
+                  data:parme,
                   dataType:'json',
               }).success(function (data,status, headers, config) {
                   alert("注册成功！")
-                  window.location="index.html";
+                  window.location="login.html";
               }).error(function (data,status,headers,config) {
                   alert("注册失败！");
                   window.location="register.html";
