--- a/src/main/web/g.html
+++ b/src/main/web/g.html
@@ -61,10 +61,10 @@
 						<tbody>
 							<tr>
 								<td bgcolor="#ffffff">
-									<a href="#"><img src="img/continue.gif" alt="continue"></a>
+									<a href="index.html"><img src="img/continue.gif" alt="continue"></a>
 								</td>
 								<td bgcolor="#ffffff" align="right">
-									<a href="#"><img src="img/checkout.gif" alt="checkout"></a>
+									<a href="pay.jsp"><img  src="img/checkout.gif" alt="checkout"></a>
 
 								</td>
 							</tr>
