--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -157,12 +157,10 @@
                 data:parme,
                 dataType:'json'
             }).success(function(data, status, headers, config){
-              /*  alert("success");
-                window.location="index.html"*/
-
-
+                alert("success");
+                window.location="index.html"
             }).error(function(data, status, headers, config){
-                alert("成功！");
+                alert("error！");
             })
         }
     });
