--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -706,6 +706,7 @@
                 <a><img src="{{value.picture}}"></a>
                 <a>{{value.c_name}}</a>
                 <a>{{value.label}}</a>
+               <a>{{value.retail_price}}</a>
                 <a href="pay.jsp" ng-click="findById(value.c_id)">立即购买</a>
             </li>
 
