--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -703,11 +703,10 @@
     <div id="head_hot_goods_content">
         <ul>
             <li class="floor_goods_wrap_li"  ng-repeat="(x, value) in myObj">
-                <a><img src="{{value.picture}}"></a>
-                <a>{{value.c_name}}</a>
-                <a>{{value.label}}</a>
-                <a>{{value.retail_price}}</a>
-                <button id="sio" ng-click="findById(value.c_id,value.retail_price,value.c_name)" style="background-color: red;color: #7d8289">立即购买</button>
+                <a  ng-click="findById(value.c_id,value.retail_price,value.c_name)"><img src="{{value.picture}}"></a>
+                <a  ng-click="findById(value.c_id,value.retail_price,value.c_name)">{{value.c_name}}</a>
+                <a  ng-click="findById(value.c_id,value.retail_price,value.c_name)">{{value.label}}</a>
+                <a  ng-click="findById(value.c_id,value.retail_price,value.c_name)">{{value.retail_price}}</a>
 
             </li>
 
@@ -727,7 +726,7 @@
                 <a ng-click="findById(value.c_id,value.retail_price,value.c_name)"  class="floor_goods_img"><img src="{{value.picture}}"></a>
                 <a ng-click="findById(value.c_id,value.retail_price,value.c_name)" class="floor_goods_tit">{{value.c_name}}</a>
                 <a ng-click="findById(value.c_id,value.retail_price,value.c_name)"  class="floor_goods_txt">{{value.label}}</a>
-                <a ng-click="findById(value.c_id,value.retail_price,value.c_name)" class="floor_goods_price">{{value.retail_price}}元</a>
+                <a ng-click="findById(value.c_id,value.retail_price,value.c_name)" class="floor_goods_price">{{value.retail_price}}</a>
             </li>
             <div style="clear:both;"></div>
         </ul>
@@ -804,7 +803,6 @@
             });
             $scope.findById = function(id,money,cname) {
                 //参数
-
                 var params={ 'money':money,"id":id ,"cname":cname};
                 $http({
                     method:'POST',
@@ -814,9 +812,6 @@
                 }).success(function(data, status, headers, config){
                     //处理返回值 进行跳转
                     console.log(data);
-                   // window.location="/pay.jsp?cname="+cname;
-                  //window.location="/pay.jsp?money="+money;
-
                     window.location="/pay.jsp?id="+id+"&money="+money+"&cname="+cname;
                 }).error(function(data, status, headers, config){
                     console.log(data)
