--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/loginregister.css">
     <link rel="stylesheet" href="/css/valifrom.css">
+    <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="/js/angular/angular.min.js" type="text/javascript"></script>
     <style>
         .form-box .input-box {
             overflow: hidden;
@@ -41,15 +43,15 @@
                         <a href="register.html" class="blue" >注册账号</a>
                     </div>
                     <div class="input-box input-box1 onfocusstyle user-word">
-                        <label for="loginname" class="icon-user"></label>
-                        <input type="text" name="username"  id="loginname" required="required"  ng-model="username"  placeholder="用户名" class="position-input" maxlength="20">
+                        <label for="username" class="icon-user"></label>
+                        <input type="text" name="username"  id="username" required="required"  ng-model="username"  placeholder="用户名" class="position-input" maxlength="20">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
                     </div>
                     <div class="input-box onfocusstyle passw-word">
-                        <label for="passw" class="icon-passw"></label>
-                        <input type="password" name="password" id="passw" value="" required="required"  ng-model="password" placeholder="密码" class="position-input" maxlength="20" datatype="*" autocomplete="off">
+                        <label for="password" class="icon-passw"></label>
+                        <input type="password" name="password" id="password" value="" required="required"  ng-model="password" placeholder="密码" class="position-input" maxlength="20" datatype="*" autocomplete="off">
                         <div class="Validform_checktip formtip">
                             <span class=""><i></i><label></label></span>
                         </div>
@@ -133,38 +135,30 @@
     </div>
 </div>
     </div>
-<script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="/js/main.js" type="text/javascript"></script>
-<script src="/js/users.js" type="text/javascript"></script>
+
+<!--<script src="/js/main.js" type="text/javascript"></script>-->
+<!--<script src="/js/users.js" type="text/javascript"></script>-->
 <script src="/js/layer.min.js"></script>
-<script src="/js/angular/angular.min.js" type="text/javascript"></script>
+
 <script>
-    var app = angular.module('login', []);
-    app.controller('loginCtrl', function($scope,$http) {
-        $scope.username = "";
-        $scope.password="";
-        $scope.loginFrom = function() {
-            var username=$scope.username;
-            var password=$scope.password;
-            var parme={'username':username,'password':password};
-            $http({
-                method:'POST',
-                url:'/user/selectlogin',
-                data:parme,
-                dataType:'json'
-            }).success(function(data, status, headers, config){
-                alert("success");
-                window.location="index.html"
-            }).error(function(data, status, headers, config){
-                alert("error！");
-                alert("登录成功！");
-                window.location="index.html"
-            }).error(function(data, status, headers, config){
-                alert("登录失败,请重新登录！");
-                window.location="login.html"
-            })
-        }
-    });
+var app = angular.module('login', []);
+app.controller('loginCtrl', function($scope,$http) {
+    $scope.loginFrom = function () {
+        var username = $scope.username;
+        var password = $scope.password;
+        var parme = {'username': username, 'password': password,};
+        $http({
+            method: 'POST',
+            url: '/user/selectlogin',
+            data: parme,
+            dataType: 'json',
+        }).success(function (data) {
+            alert("登录成功！");
+            window.location = "index.html"
+        });
+
+    }
+});
 
 </script>
 
