--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="input-box sub-box">
-                        <input  type="submit" id="reg" ng-click="register()" value="注册">
+                        <input  type="button" id="reg" ng-click="register()" value="注册">
                     </div>
                 </form>
             </div>
@@ -149,7 +149,7 @@
 </div>
 
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
- <!--   <script src="js/users.js" type="text/javascript"></script>-->
+   <script src="js/users.js" type="text/javascript"></script>
     <script src="js/layer.min.js"></script>
     <script src="/js/angular/angular.min.js" type="text/javascript"></script>
     <script type="text/javascript">
