--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -64,7 +64,7 @@
                         <a href="" target="_blank">忘记密码？</a>
                     </div>
                     <div class="input-box sub-box">
-                        <input type="submit"  ng-click="loginFrom()" id="login" value="登录">
+                        <input type="button"  ng-click="loginFrom()" id="login" value="登录">
                     </div>
                 </form>
                 <div class="hezuo oauth">
@@ -139,8 +139,8 @@
 <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
 <script src="/js/main.js" type="text/javascript"></script>
 
-<!--<script src="/js/main.js" type="text/javascript"></script>-->
-<!--<script src="/js/users.js" type="text/javascript"></script>-->
+<script src="/js/main.js" type="text/javascript"></script>
+<script src="/js/users.js" type="text/javascript"></script>
 <script src="/js/layer.min.js"></script>
 <script>
 
@@ -155,7 +155,7 @@
                 url: '/user/selectlogin',
                 data: parme,
                 dataType: 'json',
-            }).success(function (dataa) {
+            }).success(function (data) {
                 alert("登录成功！");
                 window.location = "index.html"
             });
