--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -31,12 +31,12 @@
                 <span>|</span>
                 <a class="head_nav_a" href="register.html">注册</a>
             </div>
-            <div id="head_car">
+          <!--  <div id="head_car">
                 <a href="g.html" class="head_car_text">购物车（0）</a>
                 <div id="car_content" style="height: 0px;width:0px ;background-color: #edffc6;z-index: 999">
                     <a class="car_text"></a>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
@@ -772,7 +772,7 @@
                 </dl>
             </div>
             <div class="foot_bottom_r">
-                <a>400-100-5678</a>
+                <a>400-660-6989</a>
                 <a>周一至周日 8:00-18:00</a>
                 <a>（仅收市话费）</a>
                 <span> 24小时在线客服</span>
