--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/xiaomi.css"/>
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery.animate-colors-min.js"></script>
-
+    <link rel="shortcut icon" href="user/favicon.ico">
 <style type="text/css">
     .banner_menu_content ul li a img{
 
@@ -702,10 +702,10 @@
     <div id="head_hot_goods_content">
         <ul>
             <li class="floor_goods_wrap_li"  ng-repeat="(x, value) in myObj">
-                <a ng-click="findById(value.c_id,value.retail_price)"><img src="{{value.picture}}"></a>
-                <a ng-click="findById(value.c_id,value.retail_price)">{{value.c_name}}</a>
-                <a ng-click="findById(value.c_id,value.retail_price)">{{value.label}}</a>
-                <a style="color:  #FF6700;margin-top: 20px;"  ng-click="findById(value.c_id,value.retail_price)">{{value.retail_price}}</a>
+                <a ng-click="findById(value.c_id,value.retail_price,value.c_name)"><img src="{{value.picture}}"></a>
+                <a ng-click="findById(value.c_id,value.retail_price,value.c_name)">{{value.c_name}}</a>
+                <a ng-click="findById(value.c_id,value.retail_price,value.c_name)">{{value.label}}</a>
+                <a style="color:  #FF6700;margin-top: 20px;"  ng-click="findById(value.c_id,value.retail_price,value.c_name)">{{value.retail_price}}</a>
             </li>
         </ul>
     </div>
@@ -798,18 +798,18 @@
             }, function errorCallback(response) {
 
             });
-            $scope.findById = function(id,money,cname) {
+            $scope.findById = function(id,money,c_name) {
                 //参数
-                var params={ 'money':money,"id":id ,"cname":cname};
+                var params={ 'money':money,"id":id ,"c_name":c_name};
                 $http({
                     method:'POST',
-                    url:'/comm/findById?id='+id+"&money="+money+"&cname"+cname,
+                    url:'/comm/findById?id='+id+"&money="+money+"&c_name"+c_name,
                     data:params,
                     dataType:'text',
                 }).success(function(data, status, headers, config){
                     //处理返回值 进行跳转
                     console.log(data);
-                    window.location="/pay.jsp?id="+id+"&money="+money+"&cname="+cname;
+                    window.location="/pay.jsp?id="+id+"&money="+money+"&c_name="+c_name;
                 }).error(function(data, status, headers, config){
                     console.log(data)
                     console.log(status)
