--- a/src/main/web/login.html
+++ b/src/main/web/login.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/loginregister.css">
     <link rel="stylesheet" href="/css/valifrom.css">
+    <link rel="shortcut icon" href="user/favicon.ico">
+
     <style>
         .form-box .input-box {
             overflow: hidden;
