--- a/src/main/web/register.html
+++ b/src/main/web/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/loginregister.css">
     <link rel="stylesheet" href="css/valifrom.css">
-
+    <link rel="shortcut icon" href="user/favicon.ico">
     <link rel="stylesheet" href="css/layer.css" id="layui_layer_skinlayercss"></head>
 <link rel="stylesheet" href="js/users.js">
 <link rel="stylesheet" href="js/utils.js">
