--- a/src/main/web/user/addComm.html
+++ b/src/main/web/user/addComm.html
@@ -247,7 +247,7 @@
                 dataType:'json',
             }).success(function(data, status, headers, config){
                 alert("添加成功！");
-                window.location="datagridComm.html"
+                window.location="datagridComm.jsp"
             }).error(function(data, status, headers, config){
                 alert("error");
             })
