--- a/src/main/web/user/datagrid.html
+++ b/src/main/web/user/datagrid.html
@@ -22,8 +22,8 @@
         <thead>
         <tr>
 
-            <th>账户</th>
-            <th>用户类别</th>
+           <!-- <th>账户</th>
+            <th>用户类别</th>-->
             <th>密码</th>
             <th>昵称</th>
             <th>邮箱</th>
@@ -33,17 +33,17 @@
             <th>积分</th>
             <th>等级</th>
             <th>创建时间</th>
-            <th>状态</th>
-            <th>收藏</th>
-            <th>金额</th>
+         <!--   <th>状态</th>-->
+       <!--     <th>收藏</th>-->
+           <th>金额</th>
             <th>操&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;作</th>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="user in users">
 
-            <td>{{user.user_id}}</td>
-            <td>{{user.type}}</td>
+          <!--  <td>{{user.user_id}}</td>
+            <td>{{user.type}}</td>-->
             <td>{{ user.password }}</td>
             <td>{{user.nickname}}</td>
             <td>{{user.email}}</td>
@@ -53,8 +53,8 @@
             <td>{{user.integral}}</td>
             <td>{{ user.grade }}</td>
             <td>{{ user.joindate }}</td>
-            <td>{{ user.ustate }}</td>
-            <td>{{ user.collect }}</td>
+        <!--    <td>{{ user.ustate }}</td>
+            <td>{{ user.collect }}</td>-->
             <td>{{ user.monetary }}</td>
             <td>
                 <div class="btn-group">
